--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,11 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# This project
+.vscode/cSpell.json
+.vscode/settings.json
+uv.lock
+main.py
+pyproject.toml
+.python-version
